# youtube-insight-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/git/issue/: SKILL.md
.claude/skills/git/pr/: SKILL.md
.claude/skills/issue-to-pr/: SKILL.md
app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py
app/routers/: categories.py  keywords.py  trends.py  videos.py
app/services/: analyzer.py  collector.py  content_advisor.py  hot_analyzer.py  keyword_collector.py  surge_detector.py  youtube.py
docs/superpowers/plans/: 2026-03-19-phase1-foundation.md  2026-03-20-phase2-popular-videos.md  2026-03-20-phase3-video-analysis.md  2026-03-20-phase4-trend-tracking.md
docs/superpowers/specs/: 2026-03-19-youtube-category-analysis-api-design.md  2026-03-20-phase3-video-analysis-design.md  2026-03-20-phase4-trend-tracking-design.md
tests/: conftest.py  test_analysis.py  test_categories.py  test_collector.py  test_detect_video_type.py  test_keywords.py  test_parse_duration.py  test_popular_videos.py  test_trends.py  test_video_detail.py
